bluec-tests/tests/invalid/types_longlong/conflicting_global_types.c
int foo = 3;

/* It's illegal to declare the same variable
 * with different types
 */
long long foo;

int main(void) {
    return foo;
}